word wrap fix

--- a/src/components/project/MonoText.scss
+++ b/src/components/project/MonoText.scss
@@ -1,6 +1,6 @@
 .mono-text {
   white-space: pre-wrap;
-  word-break: break-all;
+  word-break: break-word;
   font-size: 10pt;
 
   span {
